Rendered items in invoice-list component

--- a/src/app/features/components/invoice/invoice-list/invoice-list.component.html
+++ b/src/app/features/components/invoice/invoice-list/invoice-list.component.html
@@ -1,1 +1,8 @@
-<p>invoice-list works!</p>
+<div>
+    <app-nav-bar/>
+    <div class="items-container">
+        @for (invoice of invoices$ | async; track invoice.id) {
+            <app-list-item [item]="invoice"/>
+        }
+    </div>
+</div>
