--- a/src/app/features/components/invoice/invoice-list/invoice-list.component.html
+++ b/src/app/features/components/invoice/invoice-list/invoice-list.component.html
@@ -1,6 +1,8 @@
-<div>
+<div class="invoice-list">
+    
     <app-nav-bar/>
-    <div class="container">
+    <div class="wrapper">    
+        <div class="container">
         <div class="toolbar">
             <div>
                 <h3 class="invoice">Invoices</h3>
@@ -18,5 +20,7 @@
             }
         </div>
     </div>
+</div>
+
    
 </div>
