--- a/src/app/shared/components/list-item/list-item.component.scss
+++ b/src/app/shared/components/list-item/list-item.component.scss
@@ -83,7 +83,7 @@
 
 @media screen and (min-width: 480px) {
     .item {
-        width: 672px;
+        width: 100%;
         height: 72px;
         justify-content: space-between;
         align-items: center;
@@ -113,4 +113,19 @@
         gap: 40px;
     }
     
+  }
+
+  @media screen and (min-width: 480px) {
+    .item {
+        width: 672px;
+        padding: none;
+        font-size: 0.75rem;
+    }
+  }
+
+  @media screen and (min-width: 860px) {
+    .item {
+        width: 730px;
+        font-size: 0.85rem;
+    }
   }
