--- a/src/app/shared/components/logo/logo.component.scss
+++ b/src/app/shared/components/logo/logo.component.scss
@@ -11,14 +11,11 @@
     width: 100%;
     height: 100%;
     border-top-right-radius: 20px;
+    // border-top-left-radius: ;
     overflow: hidden;
-   
+    background-color: var(--purple-light); 
 }
 
-.top {
-    background-color: var(--purple-light);
- 
-}
 
 
 .bottom {
@@ -30,4 +27,17 @@
     position: absolute;
     top: 22px;
     right: 22px;
+}
+
+@media screen and (min-width: 860px) {
+    .logo {
+        width: 103px;
+        height: 103px;
+    }
+
+    .logo img {
+        height: 37.7px;
+        top: 30px;
+        right: 30px;
+    }
 }
