--- a/src/app/shared/components/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/components/nav-bar/nav-bar.component.scss
@@ -7,3 +7,18 @@ nav {
 .right {
     display: flex;
 }
+
+@media screen and (min-width: 860px) {
+    nav {
+        flex-direction: column;
+        height: 100vh;
+        width: 103px;
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+
+    .right{
+        flex-direction: column;
+    }
+
+}
