--- a/src/app/shared/components/profile/profile.component.scss
+++ b/src/app/shared/components/profile/profile.component.scss
@@ -10,3 +10,15 @@ img {
     border-radius: 50px;
     width: 32px;
 }
+
+@media screen and (min-width: 860px) {
+    .profile{
+        width: 103px;
+        height: 103px;
+    }
+
+
+    img {
+        width: 40px;
+    }
+}
