--- a/src/app/shared/components/theme-toggler/theme-toggler.component.scss
+++ b/src/app/shared/components/theme-toggler/theme-toggler.component.scss
@@ -6,3 +6,12 @@
     align-items: center;
     border-right: 1px solid #979797;
 }
+
+@media screen and (min-width: 860px) {
+    .theme-toggler {
+        width: 100%;
+        height: 103px;
+        border-right: none;
+        border-bottom: 1px solid #979797;
+    }
+}
