Added shadow and hover state to list item

--- a/src/app/shared/components/list-item/list-item.component.scss
+++ b/src/app/shared/components/list-item/list-item.component.scss
@@ -7,8 +7,13 @@
     flex-direction: column;
     border-radius: 8px;
     justify-content: space-between;
+    box-shadow: 0 0 10px var(--grey);
 }
 
+
+.item:hover {
+    border: 1px solid var(--purple-light);
+}
 .item-price {
     align-self: flex-end;
 
