Styled details page in mobile view

--- a/src/app/features/components/invoice/invoice-details/invoice-details.component.html
+++ b/src/app/features/components/invoice/invoice-details/invoice-details.component.html
@@ -1,3 +1,89 @@
 <div>
     <app-nav-bar/>
+    <div class="main-wrapper">
+    <div class="back ">
+        <div class="back-content">
+            <svg width="7" height="10" xmlns="http://www.w3.org/2000/svg"><path d="M6.342.886L2.114 5.114l4.228 4.228" stroke="#9277FF" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+            <p  class="dark bold">Go back</p>
+        </div>
+    </div>
+    <div class="status-container">
+        <p>Status</p>
+        <div class="status draft">
+             <div class="round"></div>
+            <p class="bold">Pending</p>
+        </div>
+    </div>
+
+    <div class="details-container">
+        <div class="top">
+            <div class="id">
+                <p class="large bold ">#<span class="dark ">XM9141</span></p>
+                <p>Graphic Design</p>
+            </div>
+            <div class="address">
+                <p>19 Union Terrace</p>
+                <p>London</p>
+                <p>E1 3EZ</p>
+                <p>United Kingdom</p>
+            </div>
+     </div>
+     <div class="middle">
+        <div class="date">
+            <div class="invoice-date">
+                <p>Invoice Date</p>
+                <p class="bold dark larger">21 Aug 2021</p>
+            </div>
+            <div class="due-date">
+                <p>Payment Due</p>
+                <p class="bold dark larger">21 Sep 2021</p>
+            </div>
+        </div>
+        <div class="bill">
+            <p>Bill To</p>
+            <p class="bold dark larger">Alex Grim</p>
+            <p>84 Church Way</p>
+            <p>Bradford</p>
+            <p>BDI 9PB</p>
+            <p>United Kingdom</p>
+        </div>
+        <div class="email">
+            <p>Sent to</p>
+            <p class="larger bold dark">alexgrim#mail.com</p>
+        </div>
+
+  
+     </div>
+     <div class="pricing">
+        <div class="billing">
+            <div class="item">
+                <div>
+                    <p class="item-name bold dark">
+                        Banner Design
+                    </p>
+                    <p class="bold"><span class="quantity">1x</span>
+                        <span class="price bold">$156.00</span>
+                    </p>
+                </div>
+                <p class="price bold large dark">$156.00</p>
+            </div>
+            <div class="item">
+                <div>
+                    <p class="item-name bold dark">
+                        Banner Design
+                    </p>
+                    <p class="bold"><span class="quantity">1x</span>
+                        <span class="price bold">$156.00</span>
+                    </p>
+                </div>
+                <p class="price bold large dark">$156.00</p>
+            </div>
+        </div>
+        <div class="total">
+            <p>Grand Total</p>
+            <p class="bold large">$556.00</p>
+        </div>
+    </div>
+    </div>
+</div>
 </div>
