--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,11 +15,11 @@
     --grey: #dfe3fa;
     --dark-grey: #888eb0;
     --light-blue: #7e88c3;
-    --black-deep: rgb(12, 14, 22);
+    --black-deep: #0c0e16;
     --red-deep: rgb(236, 87, 87);
-    --red-light: rgb(255, 151, 151);
-    --white-smokish: rgb(248, 248, 251);
-    --black-light: rgb(20, 22, 37);
+    --red-light: #ff9797;
+    --white-smokish: #f8f8fb;
+    --black-light: #141625;
     --edit-button-bg: #F9FAFE;
     --save-as-draft-button-bg: #373B53;
 }
