Added buttons to details page

--- a/src/app/features/components/invoice/invoice-details/invoice-details.component.html
+++ b/src/app/features/components/invoice/invoice-details/invoice-details.component.html
@@ -95,3 +95,8 @@
 }
 </div>
 </div>
+<div class="buttons">
+    <button class="edit bold">Edit</button>
+    <button class="delete bold">Delete</button>
+    <button class="read bold">Mark as Paid</button>
+</div>
