--- a/src/app/features/components/invoice/invoice-details/invoice-details.component.html
+++ b/src/app/features/components/invoice/invoice-details/invoice-details.component.html
@@ -1,12 +1,7 @@
 <div class="details-page">
     <app-nav-bar/>
     <div class="main-wrapper">
-    <div class="back ">
-        <div class="back-content">
-            <svg width="7" height="10" xmlns="http://www.w3.org/2000/svg"><path d="M6.342.886L2.114 5.114l4.228 4.228" stroke="#9277FF" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
-            <p  class="dark bold">Go back</p>
-        </div>
-    </div>
+        <app-back-button/>
     @if(invoice$ | async; as invoice){
     <div class="status-container">
         <div class="status-wrapper">
