--- a/src/app/features/components/invoice/new-invoice-form/new-invoice-form.component.html
+++ b/src/app/features/components/invoice/new-invoice-form/new-invoice-form.component.html
@@ -1,3 +1,54 @@
 <div>
     <app-nav-bar />
+    <app-back-button/>
+    <div class="invoice-container">
+        <h2>New Invoice</h2>
+        <div>
+            <form action="">
+                <p>Bill from</p>
+                <div>
+                    <div>
+                    <label for="street">
+                        Street Addresss
+                    </label>
+                    <input type="text" id="street" name="street">
+                </div>
+                <div>
+                    <div>
+                        <label for="city">City</label>
+                        <input type="text" name="city" id="City">
+                    </div>
+                    <div>
+                        <label for="post-code">Post Code</label>
+                        <input type="text" name="post-code" id="post-code">
+                    </div>
+                    <div>
+                        <label for="country">Country</label>
+                        <input type="text" name="country" id="country">
+                    </div>
+                </div>
+                </div>
+                <p>Bill To</p>
+                <div>
+                    <div>
+                        <label for="client-name">Client's  Name</label>
+                        <input type="text" name="client-name" id="client-name">
+                    </div>
+                    <div>
+                        <label for="client-email">Client's Email</label>
+                        <input type="text" name="client-email" id="client-email">
+                    </div>
+                    <div>
+                        <label for="street-address">Street Address</label>
+                        <input type="text" name="street-address" id="street-address">
+                    </div>
+                    <div>
+                        
+                    </div>
+                </div>
+            </form>
+            
+        </div>
+
+    </div>
 </div>
