--- a/src/app/features/components/invoice/invoice-details/invoice-details.component.html
+++ b/src/app/features/components/invoice/invoice-details/invoice-details.component.html
@@ -1,5 +1,6 @@
 <div class="details-page">
     <app-nav-bar/>
+    <div class="center">
     <div class="main-wrapper">
         <app-back-button/>
     @if(invoice$ | async; as invoice){
@@ -97,6 +98,7 @@
     </div>
     </div>
 }
+</div>
 </div>
 </div>
 <div class="buttons-bottom">
