--- a/src/app/components/invoice-card/invoice-card.component.html
+++ b/src/app/components/invoice-card/invoice-card.component.html
@@ -12,7 +12,7 @@
   </div>
   <div class="invoice__price">
     <p class="price">
-      {{ invoice.total | currency : "GBP" : "symbol" : "1.2-2" }}
+      {{ invoice.total | currency : "GBP" }}
     </p>
   </div>
   <div class="invoice__status">
