--- a/src/app/components/invoice-detail-header/invoice-detail-header.component.sass
+++ b/src/app/components/invoice-detail-header/invoice-detail-header.component.sass
@@ -14,9 +14,9 @@
     .actions
         padding: 1.2rem
         display: flex
-        justify-content: space-between
+        justify-content: center
         align-items: center
-        gap: .8rem
+        gap: .6rem
         background: white
         position: fixed
         bottom: 0
@@ -25,6 +25,11 @@
 
     div.flex 
         gap: .8rem
+
+@media screen and (min-width: 1024px)
+    .card 
+        .status 
+            width: 30%
 
 
 @media screen and (min-width: 1024px)
