--- a/src/styles.sass
+++ b/src/styles.sass
@@ -117,13 +117,12 @@ button, input
   object-fit: cover
 
 .btn 
-  padding: 1rem 1.5rem
+  padding: 1rem 1.2rem
   border: none
-  border-radius: 0.25rem
   cursor: pointer
   transition: background-color 0.3s ease
   border-radius: 20rem
-  font-weight: 500
+  font-weight: 700
   
   &-primary 
     background-color: $primary-purple
@@ -250,7 +249,9 @@ button, input
 .p-inputtext:focus-visible
   border-color: $primary-purple
   outline: $primary-purple
-  
+
+p.total-invoices
+  display: none
 
 .no-scroll 
   overflow: hidden
@@ -325,6 +326,13 @@ button, input
 
   .p-confirm-dialog 
     width: 50% !important
+  
+  span.total-invoices
+    display: none
+  p.total-invoices
+    display: block
+
+        
 
 
 
