--- a/src/app/components/main-panel/main-panel.component.sass
+++ b/src/app/components/main-panel/main-panel.component.sass
@@ -4,6 +4,7 @@
     position: fixed // just to make the z-index apply properly
     padding: 0
     width: 100%
+    height:69px
     background: $panel-bg
     z-index: 4000
 
