Fixed mobile view for details page

--- a/src/app/components/home-header/home-header.component.sass
+++ b/src/app/components/home-header/home-header.component.sass
@@ -42,7 +42,9 @@ header
             padding: .6rem
             padding-right: 1.5rem
             box-shadow: $shadow-primary
-
+            color: black
+            font-weight: 600
+            
             label 
                 display: flex
                 align-items: center
@@ -67,3 +69,6 @@ header
                 height: 30px
                 border-radius: 50%
                 background: $bg-accent
+
+
+@media screen and (min-width: 768px)
