--- a/src/app/components/invoice-detail-content/invoice-detail-content.component.sass
+++ b/src/app/components/invoice-detail-content/invoice-detail-content.component.sass
@@ -28,6 +28,7 @@
     border-radius: 10px
     background: $bg-accent-gray
     margin-top: 1.5rem
+    overflow: hidden
 
     .item-header
         display: none
