--- a/src/app/components/invoice-detail-header/invoice-detail-header.component.html
+++ b/src/app/components/invoice-detail-header/invoice-detail-header.component.html
@@ -41,7 +41,7 @@
           fill-rule="evenodd"
         />
       </svg>
-      <span>Back</span>
+      <span>Go back</span>
     </button>
   </ng-template>
   <app-invoice-form (closeModal)="closeEditModal()" [invoice]="invoice"  />
