--- a/src/app/components/invoice-form/invoice-form.component.html
+++ b/src/app/components/invoice-form/invoice-form.component.html
@@ -303,7 +303,7 @@
         (click)="handleCloseModal()"
         class="btn btn-secondary"
       >
-        Cancel
+        Discard
       </button>
       <!-- save as draft -->
       @if(!invoice) {
