Fixed back button

--- a/src/app/pages/invoice-detail/invoice-detail.component.html
+++ b/src/app/pages/invoice-detail/invoice-detail.component.html
@@ -10,7 +10,7 @@
           fill-rule="evenodd"
         />
       </svg>
-      <span>Back</span>
+      <span>Go back</span>
     </button>
 
     @if(invoice$ | async; as invoice) {
